# streamlit-cookies-manager

./: .gitignore  .pre-commit-config.yaml  Makefile  example.py  pyproject.toml
streamlit_cookies_manager/: __init__.py  cookie_manager.py  encrypted_cookie_manager.py  index.html  package-lock.json  package.json  vite.config.ts
streamlit_cookies_manager/public/: index.html
streamlit_cookies_manager/src/: index.ts
