[tool.poetry]
name = "streamlit-cookies-manager"
version = "0.2.1"
description = "Access and save cookies from Streamlit"
authors = ["Tomasz Kontusz <tomasz.kontusz@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
# Ensure the prebuilt frontend assets are included in both sdist and wheel.
# Using a single include entry without a `format` key applies to all distributions.
include = [
    { path = "streamlit_cookies_manager/build/**" },
]

[tool.poetry.dependencies]
# Python compatibility
python = ">=3.10"

# Runtime dependencies
streamlit = ">=1.33.0"
cryptography = ">=41.0.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
# You can add development dependencies here if you have any.
# For example:
# pytest = "^8.0.0"
# black = { version = "^24.0.0", allow-prereleases = true }
# ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
